# ft-trading

./: .gitignore  Anchor.toml  README.md  Readme.md  plan.txt
programs/ft-trading/: Cargo.toml
programs/ft-trading/src/: constant.rs  errors.rs  lib.rs
programs/ft-trading/src/intructions/: admin.rs  buy.rs  claim.rs  close.rs  mod.rs  sell.rs  whitelist_nft.rs
programs/ft-trading/src/state/: divindend.rs  divindend_vault.rs  mod.rs  seller_escrow.rs  whitelisted_nft.rs
tests/: ft-trading.ts
